<resources>
    <string name="app_name">Camera security</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="camera_view_description">Displays the live feed from the camera</string>
    <!-- Strings related to login -->
    <string name="prompt_server_hostname">Server hostname</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome!"</string>
    <string name="invalid_username">Not a valid hostname</string>
    <string name="invalid_password">Password must be >=4 characters</string>
    <string name="login_failed">"Login failed"</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="open_the_create_new_monitored_zone_view">Open the create new monitored zone view</string>
    <string name="deletes_the_monitored_zone">Deletes the monitored zone</string>
    <string name="is_active">Active</string>
    <string name="is_inactive">Inactive</string>
    <string name="add_monitored_zone">Add monitored zone</string>
    <string name="set_bottom_right_corner">Set bottom right corner (x)</string>
    <string name="set_top_left_corner">Set top left corner (o)</string>
    <string name="monitored_zone_name">Monitored zone name</string>
    <string name="displays_the_alert_image">Displays the alert image</string>
    <string name="draw_detected_objects">Draw detected objects</string>
    <string name="draw_monitored_zones">Draw monitored zones</string>
    <string name="select_labels_to_trigger_zone">Select labels to trigger zone</string>
    <string name="current_password">Current password</string>
    <string name="new_password">New password</string>
    <string name="repeat_new_password">Repeat new password</string>
    <string name="passwords_do_not_match">New passwords do not match!</string>
    <string name="login">Login</string>
    <string name="change_password">Change password</string>
    <string name="alerts">Alerts</string>
    <string name="monitored_zones">Monitored zones</string>
    <string name="camera_feed">Camera feed</string>
    <string name="not_authenticated_chpw">You are not authenticated. Login first!</string>
</resources>