<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_login"
        android:icon="@android:drawable/ic_lock_idle_lock"
        android:title="@string/login" />

    <item
        android:id="@+id/navigation_change_password"
        android:icon="@android:drawable/ic_menu_manage"
        android:title="@string/change_password" />

    <item
        android:id="@+id/navigation_alert_list"
        android:icon="@android:drawable/ic_menu_view"
        android:title="@string/alerts" />

    <item
        android:id="@+id/navigation_monitored_zones"
        android:icon="@android:drawable/ic_menu_info_details"
        android:title="@string/monitored_zones" />

    <item
        android:id="@+id/navigation_camera_feed"
        android:icon="@android:drawable/ic_menu_camera"
        android:title="@string/camera_feed" />

</menu>