<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.lzaromskis.camerasecurity.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_dashboard"
        android:name="com.lzaromskis.camerasecurity.ui.dashboard.DashboardFragment"
        android:label="@string/title_dashboard"
        tools:layout="@layout/fragment_dashboard" />

    <fragment
        android:id="@+id/navigation_notifications"
        android:name="com.lzaromskis.camerasecurity.ui.notifications.NotificationsFragment"
        android:label="@string/title_notifications"
        tools:layout="@layout/fragment_notifications" />

    <fragment
        android:id="@+id/navigation_login"
        android:name="com.lzaromskis.camerasecurity.ui.login.LoginFragment"
        android:label="Login"
        tools:layout="@layout/fragment_login" />

    <fragment
        android:id="@+id/navigation_camera_feed"
        android:name="com.lzaromskis.camerasecurity.ui.camerafeed.LiveCameraFeed"
        android:label="Camera feed"
        tools:layout="@layout/fragment_live_camera_feed" />

    <fragment
        android:id="@+id/navigation_monitored_zones"
        android:name="com.lzaromskis.camerasecurity.ui.monitoredzones.MonitoredZonesFragment"
        android:label="Monitored zones"
        tools:layout="@layout/fragment_monitored_zones" />

</navigation>