<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.addmonitoredzone.AddMonitoredZoneFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/add_zone_image"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:adjustViewBounds="true"
            android:scaleType="fitXY"
            android:scaleX="1"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:src="@tools:sample/avatars" />

        <Button
            android:id="@+id/add_zone_add_button"
            style="@style/Widget.AppCompat.Button.Colored"
            android:layout_width="0dp"
            android:layout_height="60dp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="8dp"
            android:clickable="false"
            android:text="@string/add_monitored_zone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <Button
            android:id="@+id/add_zone_top_left_button"
            style="@style/Widget.AppCompat.Button.Borderless.Colored"
            android:layout_width="175dp"
            android:layout_height="60dp"
            android:layout_marginStart="16dp"
            android:layout_marginBottom="8dp"
            android:text="@string/set_top_left_corner"
            app:layout_constraintBottom_toTopOf="@+id/add_zone_select_labels"
            app:layout_constraintStart_toStartOf="parent" />

        <Button
            android:id="@+id/add_zone_bottom_right_button"
            style="@style/Widget.AppCompat.Button.Colored"
            android:layout_width="175dp"
            android:layout_height="60dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="8dp"
            android:text="@string/set_bottom_right_corner"
            app:layout_constraintBottom_toTopOf="@+id/add_zone_select_labels"
            app:layout_constraintEnd_toEndOf="parent" />

        <EditText
            android:id="@+id/add_zone_name_input"
            android:layout_width="0dp"
            android:layout_height="60dp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="16dp"
            android:autofillHints=""
            android:ems="10"
            android:hint="@string/monitored_zone_name"
            android:inputType="text"
            app:layout_constraintBottom_toTopOf="@+id/add_zone_bottom_right_button"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent" />

        <Button
            android:id="@+id/add_zone_select_labels"
            android:layout_width="0dp"
            android:layout_height="60dp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="8dp"
            android:text="@string/select_labels_to_trigger_zone"
            app:layout_constraintBottom_toTopOf="@+id/add_zone_add_button"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <TextView
        android:id="@+id/top_left_marker"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:gravity="center"
        android:text="O"
        android:textColor="#E91E63"
        android:textSize="18sp"
        android:textStyle="bold"
        android:translationX="100px"
        android:typeface="monospace"
        tools:visibility="invisible" />

    <TextView
        android:id="@+id/bottom_right_marker"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:gravity="center"
        android:text="X"
        android:textColor="#E91E63"
        android:textSize="18sp"
        android:textStyle="bold"
        android:typeface="monospace"
        tools:visibility="invisible" />

</FrameLayout>